--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ img {
 
 header{
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -96,11 +97,13 @@ header{
 
 .header-list-nav{
     display: flex;
-    
+    align-items: center;
     gap: 40px;
     
    
 }
+
+
 
 .std{
     color: #2e2f42;
@@ -117,7 +120,7 @@ display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+  
 }
 
 ul>.email {
@@ -137,6 +140,7 @@ ul>.email {
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .email:hover,
@@ -152,14 +156,30 @@ ul>.email {
     font-size: 16px;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 
 
 }
 
+.studio.current{
+    position: relative;
+}
+
+.studio.current::after {
+    content: '';
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px
+}
+
 .studio:hover,
-:focus {
+:focus,.studio.current {
     color: #404bbf;
 }
 
@@ -173,10 +193,25 @@ ul>.email {
 
 /*Main-page*/
 
+
 .main-page{
    background-color: #2e2f42;
    padding: 188px 0;
+background-image:linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)) ,url("../images/people-office-min.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover;
+    box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05);
+    max-width: 1440px;
+    height: 600px;
+    margin: auto;
+   
+    
+   
 }
+
+
 .btn {
 font-family: "Roboto", sans-serif;
 font-weight: 500;
@@ -192,6 +227,7 @@ letter-spacing: 0.04em;
         height: 56px;
         border: none;
         min-width: 169px ;
+        transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
     
  }
@@ -258,7 +294,16 @@ letter-spacing: 0.04em;
 }
 
 
-
+.opportunity-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #8e8f99;
+        border-radius: 4px;
+        width: 264px;
+        height: 112px;
+    background: #f4f4fd;
+}
 
 
 
@@ -308,14 +353,16 @@ font-weight: 500;
 .text-wrapper{
 
 padding: 32px 0;
+
 }
 
 .list{
 background-color: #FFFFFF;
 border-radius: 0px 0px 4px 4px;
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-    
 
+    
 .team  .guys{
     font-weight: 500;
         font-size: 20px;
@@ -333,12 +380,14 @@ line-height: 120%;
             letter-spacing: 0.02em;
             text-align: center;
             color: #434455;
-            margin-bottom: 32px;
+            margin-bottom: 8px;
+            
             
 }
 
 .third-page {
     background-color: #F4F4FD;
+    
     
 }
 
@@ -350,6 +399,30 @@ line-height: 120%;
     
    
    
+}
+.team-svg{
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+    
+    
+   
+}
+
+
+.team-links{
+display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-links:hover{
+   background-color: #404bbf;
 }
 
 /*Portfolio*/
@@ -417,6 +490,13 @@ line-height: 120%;
     
        width: 360px;
        flex-basis: calc((100% - 24 * 2) / 6);
+    overflow: hidden;
+
+    
+      
+}
+.main-list-aps:hover{
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-wrapper{
@@ -424,6 +504,45 @@ line-height: 120%;
         border-left: 1px solid #e7e9fc;
         border-right: 1px solid #e7e9fc;
         padding: 32px 16px;
+        
+}
+
+.overlay{
+    position: relative;
+       
+    
+    
+
+}
+.overlay-text{
+    background-color: #4d5ae5;
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        text-align: center;
+        padding-top: 40px;
+        padding-right: 32px;
+        padding-left: 32px;
+        position: absolute;
+        top: 0;
+            right: 0;
+            height: 100%;
+            width: 100%;
+            transform: translateY(145%);
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+           
+        
+            
+        
+    
+}
+.main-list-aps:hover .overlay-text{
+    
+   
+transform: translateY(0);
 }
 
 /*Footer*/
@@ -433,9 +552,16 @@ line-height: 120%;
     
     background: #2e2f42;
     padding: 100px 0;
+    
    
     
 
+    
+}
+
+.footer-container{
+    display: flex;
+    
     
 }
 
@@ -467,6 +593,7 @@ display: inline-block;
 
 
 
+
 }
 .second-logo{
   color:  #f4f4fd;
@@ -475,4 +602,44 @@ display: inline-block;
     letter-spacing: 0.02em;
     color: #F4F4FD;
 }
+.footer-media{
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0.02em;
+        color: #fff;
+        width: 96px;
+}
+.footer-links{
+    margin-left: 120px;
 
+}
+.footer-media{
+    margin-bottom: 16px;
+    
+}
+.footer-svg{
+    display: flex; 
+    gap: 16px;
+}
+
+    
+
+.footer-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color:#4d5ae5 ;
+    border-radius: 50%;
+transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icons{
+    fill: #f4f4fd;
+box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05);
+
+}
+.footer-link:hover{
+    background: #31d0aa;
+}
