--- a/css/styles.css
+++ b/css/styles.css
@@ -227,13 +227,13 @@ letter-spacing: 0.04em;
         height: 56px;
         border: none;
         min-width: 169px ;
-        transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
     
  }
  .btn:hover,:focus{
     
-        background: #404bbf;
+        background-color: #404bbf;
         cursor: pointer;
  }
 
@@ -303,6 +303,7 @@ letter-spacing: 0.04em;
         width: 264px;
         height: 112px;
     background: #f4f4fd;
+    margin-bottom: 8px;
 }
 
 
@@ -419,9 +420,10 @@ display: flex;
     height: 40px;
     background-color: #4d5ae5;
     border-radius: 50%;
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
-.team-links:hover{
+.team-links:hover,:focus{
    background-color: #404bbf;
 }
 
@@ -490,7 +492,8 @@ display: flex;
     
        width: 360px;
        flex-basis: calc((100% - 24 * 2) / 6);
-    overflow: hidden;
+    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
 
     
       
@@ -509,6 +512,7 @@ display: flex;
 
 .overlay{
     position: relative;
+    overflow: hidden;
        
     
     
@@ -522,17 +526,17 @@ display: flex;
         letter-spacing: 0.02em;
         color: #f4f4fd;
         text-align: center;
-        padding-top: 40px;
-        padding-right: 32px;
-        padding-left: 32px;
         position: absolute;
         top: 0;
             right: 0;
             height: 100%;
             width: 100%;
             transform: translateY(145%);
-            transition-duration: 250ms;
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            padding-top: 40px;
+            padding-right: 32px;
+            padding-bottom: 0;
+            padding-left: 32px;
            
         
             
@@ -602,6 +606,10 @@ display: inline-block;
     letter-spacing: 0.02em;
     color: #F4F4FD;
 }
+
+.logo-page{
+    margin-right: 120px;
+}
 .footer-media{
     font-weight: 500;
         font-size: 16px;
@@ -610,10 +618,10 @@ display: inline-block;
         color: #fff;
         width: 96px;
 }
-.footer-links{
-    margin-left: 120px;
 
-}
+   
+
+
 .footer-media{
     margin-bottom: 16px;
     
@@ -621,25 +629,35 @@ display: inline-block;
 .footer-svg{
     display: flex; 
     gap: 16px;
+    
+}
+
+.footer-list{
+    
 }
 
     
 
 .footer-link{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    
+      justify-content: center;
+      align-items: baseline;
+        
     width: 40px;
-    height: 40px;
-    background-color:#4d5ae5 ;
-    border-radius: 50%;
-transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        height: 40px;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+   
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .icons{
     fill: #f4f4fd;
 box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05);
+margin: 8px;
 
 }
-.footer-link:hover{
-    background: #31d0aa;
+.footer-link:hover,:focus{
+    background-color: #31d0aa;
 }
