--- a/css/styles.css
+++ b/css/styles.css
@@ -423,8 +423,11 @@ display: flex;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
-.team-links:hover,:focus{
+.team-links:hover{
    background-color: #404bbf;
+}
+.team-links:focus{
+    background-color: #404bbf;
 }
 
 /*Portfolio*/
@@ -531,12 +534,9 @@ display: flex;
             right: 0;
             height: 100%;
             width: 100%;
-            transform: translateY(145%);
+            transform: translateY(100%);
             transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            padding-top: 40px;
-            padding-right: 32px;
-            padding-bottom: 0;
-            padding-left: 32px;
+            padding: 40px 32px;
            
         
             
@@ -565,6 +565,7 @@ transform: translateY(0);
 
 .footer-container{
     display: flex;
+    align-items: baseline;
     
     
 }
@@ -632,9 +633,7 @@ display: inline-block;
     
 }
 
-.footer-list{
-    
-}
+
 
     
 
@@ -642,7 +641,7 @@ display: inline-block;
     display: flex;
     
       justify-content: center;
-      align-items: baseline;
+      align-items: center;
         
     width: 40px;
         height: 40px;
@@ -655,7 +654,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .icons{
     fill: #f4f4fd;
 box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05);
-margin: 8px;
+
 
 }
 .footer-link:hover,:focus{
